--- a/css/weather.css
+++ b/css/weather.css
@@ -13,3 +13,29 @@
   justify-content: center;
   align-items: center;
 }
+
+#weather {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 3% 7%;
+}
+
+#weather span {
+  width: 100%;
+  font-family: "Oswald", sans-serif;
+  text-shadow: 2px 2px 2px gray;
+}
+
+#weather span:first-child {
+  font-weight: 500;
+  font-size: 130%;
+  margin-bottom: 3%;
+}
+
+#weather span:last-child {
+  font-weight: 900;
+  font-size: 170%;
+  text-align: end;
+}
